--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,21 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
             "label": "Compile",
             "type": "shell",
             "command": "cd $dir && gcc $fileName -lglut -lGL -lGLU",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "Run",
+            "type": "shell",
+            "command": "cd $dir && ./a.out",
             "problemMatcher": []
         }
-    ]
+    ],
 }
